# new_york_taxi_fare

./: .gitignore  .pyproject.toml.swp  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  setup_repo.bat
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml
data/: README.md
notebooks/: README.md
src/: __init__.py  data_preprocessing.py  environment_setup.py  feature_engineering.py  model_training.py  utils.py
tests/: __init__.py  test_data_preprocessing.py  test_utils.py
