[project]
name = "new-york-taxi-demo"
version = "0.1.0"
description = "New York City Taxi Fare Prediction"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.4.0",
    "mlflow==2.16.0"
]

[project.optional-dependencies]
dev = [
    "databricks-connect>=15.4.1, <16",
    "databricks-sdk>=0.32.0, <0.33",
    "pytest>=7.5.0",
    "black>=23.9.1",
    "flake8>=6.1.0"
]